# nn-names

./: MANIFEST.in  README.md  example.py  pyproject.toml
nn_names/: __init__.py  generator.py  weights.json  weights2.json
