[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-names"
version = "1.0.0"
dependencies = []
requires-python = ">=3"
authors = [
  {name = "Pradish Bijukchhe", email = "pradishbijukchhe@gmail.com"},
]
maintainers = [
  {name = "Pradish Bijukchhe", email = "pradishbijukchhe@gmail.com"},
]
description = "A pure python package to generate random names using neural network"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/nn-names"
Issues = "https://github.com/sandbox-pokhara/nn-names/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"nn_names" = "nn_names"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
